examples/errors/15_invalid_exponent/invalid_exponent.txy
proc main()
    println("=================== PROBLEMA 01 ===================");
    var y: double = 21d;
    var x: double = 18d;
    var c: int = 5;
    var result: double = (x ** "2d") - y + double(c); # Erro injetado
    println(format("Resultado: %double", result));
endproc;
